change title in index.html
change title in index.html by shenke

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="content">
 			<canvas class="snow" id="snow" width="1920" height="917"></canvas>
 			<div class="main-text">
-				<h1>welcome to<br>shenke's data bucket</h1>
+				<h1>welcome to<br>shenke's data warehouse</h1>
 			</div>
 			<div class="ground">
 				<div class="mound">
